--- a/pages/17975.html
+++ b/pages/17975.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1111,7 +1111,7 @@ margin-left: 0em;
 <p>A detailed discussion is in</p>
 
 <ul>
-<li id='HOTW16'>Lam Hui, Jeremiah P. Ostriker, Scott Tremaine, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>On the hypothesis that cosmological dark matter is composed of ultra-light bosons</em>, Phys. Rev. D 95, 043541 (2017) (<a href='https://arxiv.org/abs/1610.08297'>arXiv:1610.08297</a>)</li>
+<li id='HOTW16'><a class='existingWikiWord' href='/nlab/show/Lam+Hui'>Lam Hui</a>, <a class='existingWikiWord' href='/nlab/show/Jeremiah+Ostriker'>Jeremiah Ostriker</a>, <a class='existingWikiWord' href='/nlab/show/Scott+Tremaine'>Scott Tremaine</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>On the hypothesis that cosmological dark matter is composed of ultra-light bosons</em>, Phys. Rev. D 95, 043541 (2017) (<a href='https://arxiv.org/abs/1610.08297'>arXiv:1610.08297</a>)</li>
 </ul>
 
 <h3 id='mond_phenomenology'>MOND Phenomenology</h3>
@@ -1169,14 +1169,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 26, 2017 11:16:07 
+  Revised on October 27, 2017 08:42:45 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.234.86)
+  (195.37.234.66)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fuzzy+dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fuzzy+dark+matter/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/fuzzy+dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fuzzy+dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fuzzy+dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fuzzy+dark+matter/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/fuzzy+dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fuzzy+dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
