--- a/pages/2424.html
+++ b/pages/2424.html
@@ -337,7 +337,7 @@ margin-left: 0em;
 <p>Since about the turn of the millennium Witten has tended to more esoteric mathematical aspects of string theory, such as its relation to <a class='existingWikiWord' href='/nlab/show/Khovanov+homology'>Khovanov homology</a> and <a class='existingWikiWord' href='/nlab/show/geometric+Langlands+correspondence'>geometric Langlands duality</a> which apparently the string theory community at large is following less enthusiastically than it was the case during the excited 1990s.</p>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#FieldMedalWork'>Fields medal work</a></li><li><a href='#related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_b24b9cf6281b59e576e04184e2301bbf58ec22d3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#FieldMedalWork'>Fields medal work</a></li><li><a href='#related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_f592aa51324f9f79f99a849df22f711edf0bca86_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</a></li></ul></div>
 <h2 id='FieldMedalWork'>Fields medal work</h2>
 
 <p>In</p>
@@ -406,11 +406,15 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_b24b9cf6281b59e576e04184e2301bbf58ec22d3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_f592aa51324f9f79f99a849df22f711edf0bca86_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>, <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/M-theory+on+G2-manifolds'>M-theory on G2-manifolds</a></p>
 </li>
 
 <li>
@@ -419,6 +423,14 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Seiberg-Witten+theory'>Seiberg-Witten theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/supersymmetric+quantum+mechanics'>supersymmetric quantum mechanics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fuzzy+dark+matter'>fuzzy dark matter</a></p>
 </li>
 </ul>
 
@@ -436,14 +448,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 24, 2016 08:45:36 
+  Revised on October 27, 2017 08:46:12 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.138.13)
+  (195.37.234.66)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Edward+Witten" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Edward+Witten/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Edward+Witten" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Edward+Witten" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Edward+Witten" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Edward+Witten/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Edward+Witten" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Edward+Witten" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
