--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,23 +308,68 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Let <math class='maruku-mathml' display='inline' id='mathml_798ef6cc643a6847d1b73655821d4c2bb887bf29_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>,</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>X,Y</annotation></semantics></math> be <a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+manifolds+and+orbifolds'>formal smooth sets</a> (def. \ref{FormalSmoothSet}). Then a morphism between them is called a <em><a class='existingWikiWord' href='/nlab/show/local+diffeomorphism'>local diffeomorphism</a></em> or <em><a class='existingWikiWord' href='/nlab/show/formally+etale+morphism'>formally étale morphism</a></em>, denoted</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_798ef6cc643a6847d1b73655821d4c2bb887bf29_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>X</mi><mover><mo>⟶</mo><mi>et</mi></mover><mi>Y</mi></mrow><annotation encoding='application/x-tex'>
+    <p>Let <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>,</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>X,Y</annotation></semantics></math> be <a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+manifolds+and+orbifolds'>formal smooth sets</a> (def. \ref{FormalSmoothSet}). Then a morphism between them is called a <em><a class='existingWikiWord' href='/nlab/show/local+diffeomorphism'>local diffeomorphism</a></em> or <em><a class='existingWikiWord' href='/nlab/show/formally+etale+morphism'>formally étale morphism</a></em>, denoted</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>X</mi><mover><mo>⟶</mo><mi>et</mi></mover><mi>Y</mi></mrow><annotation encoding='application/x-tex'>
   f \;\colon\; X \overset{et}{\longrightarrow} Y
 
 </annotation></semantics></math></div>
-<p>if <math class='maruku-mathml' display='inline' id='mathml_798ef6cc643a6847d1b73655821d4c2bb887bf29_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> if for each <a class='existingWikiWord' href='/nlab/show/formal+smooth+manifold'>infinitesimally thickened Cartesian space</a> (def. \ref{InfinitesimallyThickendSmoothManifold}) <math class='maruku-mathml' display='inline' id='mathml_798ef6cc643a6847d1b73655821d4c2bb887bf29_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔻</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \times \mathbb{D}</annotation></semantics></math> we have a natural identification between the <math class='maruku-mathml' display='inline' id='mathml_798ef6cc643a6847d1b73655821d4c2bb887bf29_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔻</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \times \mathbb{D}</annotation></semantics></math>-plots of <math class='maruku-mathml' display='inline' id='mathml_798ef6cc643a6847d1b73655821d4c2bb887bf29_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> with those <math class='maruku-mathml' display='inline' id='mathml_798ef6cc643a6847d1b73655821d4c2bb887bf29_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo lspace='0em' rspace='thinmathspace'>tiimes</mo><mi>𝔻</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \tiimes \mathbb{D}</annotation></semantics></math>-plots of <math class='maruku-mathml' display='inline' id='mathml_798ef6cc643a6847d1b73655821d4c2bb887bf29_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> whose <a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction</a> (def. \ref{ReductionAndInfinitesimalShape}) comes from an <math class='maruku-mathml' display='inline' id='mathml_798ef6cc643a6847d1b73655821d4c2bb887bf29_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math>-plot of <math class='maruku-mathml' display='inline' id='mathml_798ef6cc643a6847d1b73655821d4c2bb887bf29_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, hence if we have a <a class='existingWikiWord' href='/nlab/show/pullback'>fiber product</a></p>
+<p>if <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> if for each <a class='existingWikiWord' href='/nlab/show/formal+smooth+manifold'>infinitesimally thickened Cartesian space</a> (def. \ref{InfinitesimallyThickendSmoothManifold}) <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔻</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \times \mathbb{D}</annotation></semantics></math> we have a natural identification between the <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔻</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \times \mathbb{D}</annotation></semantics></math>-plots of <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> with those <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mi>n</mi><mo>×</mo><mi>𝔻</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n n\times \mathbb{D}</annotation></semantics></math>-plots of <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> whose <a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction</a> (def. \ref{ReductionAndInfinitesimalShape}) comes from an <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math>-plot of <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, hence if we have a <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural</a> <a class='existingWikiWord' href='/nlab/show/pullback'>fiber product</a> of <a class='existingWikiWord' href='/nlab/show/set'>sets</a> of <span class='newWikiWord'>plots<a href='/nlab/new/plots'>?</a></span></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔻</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>≃</mo><mspace width='thickmathspace'></mspace><mi>Y</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔻</mi><mo stretchy='false'>)</mo><munder><mrow><msup><mo>×</mo> <mi>f</mi></msup></mrow><mrow><mi>Y</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow></munder><mi>X</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo><mphantom><mi>AAA</mi></mphantom><mtext>i.e.</mtext><mphantom><mi>AAA</mi></mphantom><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>X</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔻</mi><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↙</mo></mtd> <mtd></mtd> <mtd><mo>↘</mo></mtd></mtr> <mtr><mtd><mi>Y</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔻</mi><mo stretchy='false'>)</mo></mtd> <mtd></mtd> <mtd><mtext>(pb)</mtext></mtd> <mtd></mtd> <mtd><mi>X</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↘</mo></mtd> <mtd></mtd> <mtd><mo>↙</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>Y</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔻</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  X(\mathbb{R}^n \times \mathbb{D})
+  \;\simeq\;
+  Y(\mathbb{R}^n \times \mathbb{D})
+    \underset{Y(\mathbb{R}^n)}{\times^f}
+  X(\mathbb{R}^n)
+  \phantom{AAA} \text{i.e.}
+  \phantom{AAA}
+  \array{
+     &amp;&amp; X(\mathbb{R}^n \times \mathbb{D})
+     \\
+     &amp; \swarrow &amp;&amp; \searrow
+     \\
+     Y(\mathbb{R}^n \times \mathbb{D}) &amp;&amp; \text{(pb)} &amp;&amp; X(\mathbb{R}^n)
+     \\
+     &amp; \searrow &amp;&amp; \swarrow
+     \\
+     &amp;&amp; Y(\mathbb{R}^n \times \mathbb{D})
+  }
+
+</annotation></semantics></math></div>
+<p>for all <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔻</mi><mo>∈</mo><mi>InfThCartSp</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \times \mathbb{D} \in InfThCartSp</annotation></semantics></math>.</p>
+
+<p>Stated more <a class='existingWikiWord' href='/nlab/show/category+theory'>abstractly</a>, this means that the <a class='existingWikiWord' href='/nlab/show/natural+transformation'>naturality square</a> of the <a class='existingWikiWord' href='/nlab/show/unit+of+a+monad'>unit</a> of the <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape</a> <math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℑ</mi></mrow><annotation encoding='application/x-tex'>\Im</annotation></semantics></math> (def. \ref{ReductionAndInfinitesimalShape}) is a <a class='existingWikiWord' href='/nlab/show/pullback'>pullback square</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>X</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mi>η</mi> <mi>X</mi></msub></mrow></mover></mtd> <mtd><mi>ℑ</mi><mi>X</mi></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mi>f</mi></mpadded></msup><mo stretchy='false'>↓</mo></mtd> <mtd><mtext>(pb)</mtext></mtd> <mtd><msup><mo stretchy='false'>↓</mo> <mpadded width='0'><mrow><mi>ℑ</mi><mi>f</mi></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>Y</mi></mtd> <mtd><munder><mo>⟶</mo><mrow><msub><mi>η</mi> <mi>Y</mi></msub></mrow></munder></mtd> <mtd><mi>ℑ</mi><mi>Y</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \array{
+    X &amp;\overset{\eta_X}{\longrightarrow}&amp; \Im X
+    \\
+    {}^{\mathllap{f}}\downarrow &amp;\text{(pb)}&amp; \downarrow^{\mathrlap{\Im f}}
+    \\
+    Y &amp;\underset{\eta_Y}{\longrightarrow}&amp; \Im Y
+  }
+
+</annotation></semantics></math></div>
+<p><math class='maruku-mathml' display='inline' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e8d6e77b991532cca37cb1a76bfe3c9e2ea67f8e_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><msup><mi>𝔻</mi> <mn>1</mn></msup></mtd> <mtd><mover><mo>↪</mo><mi>i</mi></mover></mtd> <mtd><msup><mi>ℝ</mi> <mn>1</mn></msup></mtd></mtr> <mtr><mtd></mtd> <mtd><msub><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mo stretchy='false'>(</mo><mi>ϵ</mi><mo>↦</mo><mi>f</mi><mo stretchy='false'>(</mo><mn>0</mn><mo stretchy='false'>)</mo><mo>+</mo><mfrac><mrow><mo>∂</mo><mi>f</mi></mrow><mrow><mo>∂</mo><mi>x</mi></mrow></mfrac><mo stretchy='false'>(</mo><mn>0</mn><mo stretchy='false'>)</mo><mi>ϵ</mi><mo stretchy='false'>)</mo></mrow></mpadded></msub><mo>↘</mo></mtd> <mtd><msub><mo stretchy='false'>↓</mo> <mpadded width='0'><mi>f</mi></mpadded></msub></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><msup><mi>ℝ</mi> <mn>1</mn></msup></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \array{
+    \mathbb{D}^1 &amp;\overset{i}{\hookrightarrow}&amp; \mathbb{R}^1
+    \\
+    &amp; {}_{\mathllap{(\epsilon \mapsto f(0) + \frac{\partial f}{\partial x}(0) \epsilon) }}\searrow &amp; \downarrow_{\mathrlap{f}}
+    \\
+    &amp;&amp; \mathbb{R}^1
+  }
+
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on October 27, 2017 06:05:43 
+  Revised on October 27, 2017 13:48:18 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1182" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1182 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1183" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1183 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
