--- a/pages/18719.html
+++ b/pages/18719.html
@@ -331,7 +331,7 @@ https://www.studip.uni-goettingen.de/dispatch.php/course/overview?cid=cd3c8d093d
 </li>
 
 <li>
-<p>simplicial homotopy group (GJ I.7)</p>
+<p>simplicial homotopy group (GJ I.7) Laura 2 (but maybe we need more people, it’s a long chapter)</p>
 </li>
 
 <li>
@@ -343,20 +343,24 @@ https://www.studip.uni-goettingen.de/dispatch.php/course/overview?cid=cd3c8d093d
 </li>
 
 <li>
-<p>Dold-Kan (GJ III.2)</p>
+<p>Dold-Kan (GJ III.2) Madleine</p>
+</li>
+
+<li>
+<p>Lie n-algebroids Malte</p>
 </li>
 </ol>
 </div>
 
 <div class="revisedby">
-  Created on October 26, 2017 09:47:38 
+  Revised on October 30, 2017 06:24:48 
   by <a class="existingWikiWord" href="/nlab/show/Chenchang+Zhu">Chenchang Zhu</a>
-  (134.76.82.111)
+  (134.76.82.104)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
