--- a/pages/18727.html
+++ b/pages/18727.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      Christian Brouder in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      Christian Brouder
   </h1>
 
 
@@ -308,42 +308,50 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, every Feynman diagram is a labeled <a class='existingWikiWord' href='/nlab/show/graph'>graph</a> that encodes a <a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a>: the corresponding <em><a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>Feynman amplitude</a></em>:</p>
+    <ul>
+<li><a href='http://www-ext.impmc.upmc.fr/~brouder/'>webpage</a></li>
+</ul>
 
-<p><a class='existingWikiWord' href='/nlab/files/FeynmanDiagramGlobal.jpg' title=''></a></p>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_3bdcc5b220461b36f7f22f9fec4950e7edb16aeb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
-<p>Each <a class='existingWikiWord' href='/nlab/show/edge'>edge</a> in the <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a> <a class='existingWikiWord' href='/nlab/show/graph'>graph</a> corresponds to a <a class='existingWikiWord' href='/nlab/show/quantum+propagator'>propagator</a>. The propagator for <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a> (such as <a class='existingWikiWord' href='/nlab/show/electron'>electrons</a>) are drawn as solid lines…</p>
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/product+of+distributions'>multiplication of distributions</a></p>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/files/FeynmanDiagramComponent1.jpg' title=''></a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a></p>
+</li>
 
-<p>… while the propagators for <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a> are drawn as wiggly lines:</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a></p>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/files/FeynmanDiagramComponentTwo.jpg' title=''></a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
+</li>
+</ul>
 
-<p><img src='https://ncatlab.org/nlab/files/FeynmanDiagramComponentTwo.jpg' width='700'/></p>
-
-<p><a class='existingWikiWord' href='/nlab/files/FeynmanDiagramComponentThree.jpg' title=''></a></p>
-
-<p><img src='https://ncatlab.org/nlab/files/FeynmanDiagramComponentThree.jpg' width='700'/></p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on October 30, 2017 10:58:02 
+  Created on October 30, 2017 10:29:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1186" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1186 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Christian+Brouder" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Christian+Brouder" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Christian+Brouder" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Christian+Brouder" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
