--- a/pages/3587.html
+++ b/pages/3587.html
@@ -308,27 +308,70 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
-</p>
+    <div style='float: right; margin: 0 10px 10px 0;'>
+<img src='https://ncatlab.org/nlab/files/HoermanderPortrait.jpg' width='200'/>
+</div>
+<p><strong>Lars Hörmander</strong> was a Swedish analyst and Fields medalist. His work in <a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a>, especially <a class='existingWikiWord' href='/nlab/show/microlocal+analysis'>microlocal analysis</a> and the analysis of linear <a class='existingWikiWord' href='/nlab/show/differential+equation'>PDEs</a> was a very central contribution to this theory in the 1960s and 1970s.</p>
 
-<p><strong>Lars Hörmander</strong> is a Swedish analyst and Fields medalist. His work in <a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a>, especially <a class='existingWikiWord' href='/nlab/show/microlocal+analysis'>microlocal analysis</a> and the analysis of linear <a class='existingWikiWord' href='/nlab/show/differential+equation'>PDEs</a> was a very central contribution to this theory in the 1960s and 1970s. He wrote also several books including his magnus treatise</p>
+<ul>
+<li><a href='https://en.wikipedia.org/wiki/Lars_H%C3%B6rmander'>Wikipdia entry</a></li>
+</ul>
+
+<h2 id='writings'>Writings</h2>
+
+<p>Hörmander wrote several books including his magnus treatise</p>
 
 <ul>
 <li><em>The analysis of linear partial differential operators</em>, in 4 vols.: I. Distribution theory and Fourier analysis, II. Differential operators with constant coefficients, III. Pseudo-differential operators, IV. Fourier integral operators.</li>
 </ul>
 
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_4e30328efcec694b25cf010c79fe2c6d7dbd4bfd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a>, <a class='existingWikiWord' href='/nlab/show/compactly+supported+distribution'>compactly supported distribution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/support+of+a+distribution'>support of a distribution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a>, <a class='existingWikiWord' href='/nlab/show/propagation+of+singularities+theorem'>propagation of singularities theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pullback+of+a+distribution'>pullback of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/tensor+product+of+distributions'>tensor product of distributions</a></p>
+</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on February 26, 2010 21:15:11 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (161.53.130.104)
+  Revised on October 30, 2017 10:37:49 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lars+H%C3%B6rmander" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lars+H%C3%B6rmander/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Lars+H%C3%B6rmander" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lars+H%C3%B6rmander" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lars+H%C3%B6rmander" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lars+H%C3%B6rmander/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Lars+H%C3%B6rmander" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lars+H%C3%B6rmander" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
