--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,27 +308,52 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, every Feynman diagram is a labeled <a class='existingWikiWord' href='/nlab/show/graph'>graph</a> that encodes a <a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a>: the corresponding <em><a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>Feynman amplitude</a></em>:</p>
+    <div class='un_remark' style='border: solid #0000cc; background: #4444ee; border-width: 2px 1px; padding: 0 1em; margin: 0 1em;'>
+<h6 id='summary'>Summary</h6>
 
-<p><a class='existingWikiWord' href='/nlab/files/FeynmanDiagramGlobal.jpg' title=''></a></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> in <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a></strong></p>
 
-<p>Each <a class='existingWikiWord' href='/nlab/show/edge'>edge</a> in the <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a> <a class='existingWikiWord' href='/nlab/show/graph'>graph</a> corresponds to a <a class='existingWikiWord' href='/nlab/show/quantum+propagator'>propagator</a>. The propagator for <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a> (such as <a class='existingWikiWord' href='/nlab/show/electron'>electrons</a>) are drawn as solid lines…</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> <strong><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a></strong> are labeled <a class='existingWikiWord' href='/nlab/show/graph'>graphs</a> that encode <a class='existingWikiWord' href='/nlab/show/product+of+distributions'>products of</a> <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagators</a> as they arise in the expansion – the <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></em>– of the <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em> of a given <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>L</mi> <mi>int</mi></msub></mrow><annotation encoding='application/x-tex'>L_{int}</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mrow><mo>(</mo><mstyle displaystyle='false'><mfrac><mi>g</mi><mi>ℏ</mi></mfrac></mstyle><msub><mi>L</mi> <mi>int</mi></msub><mo>)</mo></mrow><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo><mrow><mi>k</mi><mo>∈</mo><mi>ℕ</mi></mrow></munder><mfrac><mrow><msup><mi>g</mi> <mi>k</mi></msup></mrow><mrow><msup><mi>ℏ</mi> <mi>k</mi></msup><mi>k</mi><mo>!</mo></mrow></mfrac><mi>T</mi><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>L</mi> <mi>int</mi></msub><mi>⋯</mi><msub><mi>L</mi> <mi>int</mi></msub></mrow><mo>⏟</mo></munder><mrow><mi>k</mi><mspace width='thinmathspace'></mspace><mtext>factors</mtext></mrow></munder><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  S\left(\tfrac{g}{\hbar} L_{int} \right)
+  = 
+  \underset{k \in \mathbb{N}}{\sum} \frac{g^k}{\hbar^k k!} T( \underset{k \, \text{factors}}{\underbrace{L_{int} \cdots L_{int}}} )
 
-<p><a class='existingWikiWord' href='/nlab/files/FeynmanDiagramComponent1.jpg' title=''></a></p>
+</annotation></semantics></math></div>
+<p>in terms of the <em><a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered products</a></em> <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi><mo stretchy='false'>(</mo><mi>⋯</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>T(\cdots)</annotation></semantics></math> given by the <a class='existingWikiWord' href='/nlab/show/star+product'>star product</a> with the <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a> <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ω</mi> <mi>F</mi></msub></mrow><annotation encoding='application/x-tex'>\omega_F</annotation></semantics></math>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi><mo stretchy='false'>(</mo><msub><mi>L</mi> <mi>int</mi></msub><msub><mi>L</mi> <mi>int</mi></msub><mo stretchy='false'>)</mo><mo>=</mo><mi>prod</mi><mo>∘</mo><mi>exp</mi><mrow><mo>(</mo><mi>ℏ</mi><mo>∫</mo><msub><mi>ω</mi> <mi>F</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><mi>ϕ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mo>⊗</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><mi>ϕ</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></mfrac><mo>)</mo></mrow><mo stretchy='false'>(</mo><msub><mi>L</mi> <mi>int</mi></msub><mo>⊗</mo><msub><mi>L</mi> <mi>int</mi></msub><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  T(L_{int} L_{int}) = prod \circ \exp\left( \hbar \int \omega_{F}(x,y) \frac{\delta}{\delta \phi(x)} \otimes \frac{\delta}{\delta \phi(y)}  \right) ( L_{int} \otimes L_{int} )
+   \,.
 
-<p>… while the propagators for <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a> are drawn as wiggly lines:</p>
+</annotation></semantics></math></div>
+<p>Each <a class='existingWikiWord' href='/nlab/show/edge'>edge</a> in the <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a> <a class='existingWikiWord' href='/nlab/show/graph'>graph</a> corresponds to a factor of a <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a> <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ω</mi> <mi>F</mi></msub></mrow><annotation encoding='application/x-tex'>\omega_F</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>L</mi> <mi>int</mi></msub><mi>⋯</mi><msub><mi>L</mi> <mi>int</mi></msub></mrow><mo>⏟</mo></munder><mrow><mi>k</mi><mspace width='thinmathspace'></mspace><mtext>factors</mtext></mrow></munder><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>T( \underset{k \, \text{factors}}{\underbrace{L_{int} \cdots L_{int}}} )</annotation></semantics></math>, being a <a class='existingWikiWord' href='/nlab/show/Schwartz+kernel'>distribution of two variables</a>; and each <a class='existingWikiWord' href='/nlab/show/vertex'>vertex</a> corresponds to a factor of the <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>L</mi> <mi>int</mi></msub></mrow><annotation encoding='application/x-tex'>L_{int}</annotation></semantics></math> evaluated at one of the integration-variables <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>x</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>x_i</annotation></semantics></math>.</p>
 
-<p><a class='existingWikiWord' href='/nlab/files/FeynmanDiagramComponentTwo.jpg' title=''></a></p>
+<p>For example a generic Feynman diagrams as in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, where <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>L</mi> <mi>int</mi></msub><mo>∝</mo><munder><munder><mover><mi>ψ</mi><mo>¯</mo></mover><mo>⏟</mo></munder><mtext>fermionic</mtext></munder><munder><munder><mi>A</mi><mo>⏟</mo></munder><mtext>bosonic</mtext></munder><munder><munder><mi>ψ</mi><mo>⏟</mo></munder><mtext>fermionic</mtext></munder></mrow><annotation encoding='application/x-tex'>L_{int} \propto \underset{\text{fermionic}}{\underbrace{\overline{\psi}}} \underset{\text{bosonic}}{\underbrace{A}} \underset{\text{fermionic}}{\underbrace{\psi}}</annotation></semantics></math> looks as follows (with internal indices notationally suppressed):</p>
 
-<p><img src='https://ncatlab.org/nlab/files/FeynmanDiagramComponentTwo.jpg' width='700'/></p>
+<p><img src='https://ncatlab.org/nlab/files/FeynmanDiagramGlobal.jpg' width='560'/></p>
 
-<p><a class='existingWikiWord' href='/nlab/files/FeynmanDiagramComponentThree.jpg' title=''></a></p>
+<p>Here the <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagators</a> for <a class='existingWikiWord' href='/nlab/show/fermion'>fermion fields</a> <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ω</mi> <mi>F</mi></msub><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>=</mo><mi>Δ</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\omega_F(-,-) = \Delta(-,-)</annotation></semantics></math> are drawn as solid lines…</p>
 
-<p><img src='https://ncatlab.org/nlab/files/FeynmanDiagramComponentThree.jpg' width='700'/></p>
+<p><img src='https://ncatlab.org/nlab/files/FeynmanDiagramComponent1.jpg' width='560'/></p>
+
+<p>…while the Feynman propagators <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ω</mi> <mi>F</mi></msub><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>=</mo><mi>G</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\omega_F(-,-) = G(-,-)</annotation></semantics></math> for <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a> are drawn as wiggly lines:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/FeynmanDiagramComponentTwo.jpg' width='560'/></p>
+
+<p>This way each part of the <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a> <a class='existingWikiWord' href='/nlab/show/graph'>graph</a> corresponds to a <a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a>:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/FeynmanDiagramComponentThree.jpg' width='560'/></p>
+
+<blockquote>
+<p>graphics grabbed from <a href='Feynman+diagram#Brouder10'>Brouder 10</a></p>
+</blockquote>
+
+<p>A priori this <a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a> is defined away from coincident vertices: <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>x</mi> <mi>i</mi></msub><mo>≠</mo><msub><mi>x</mi> <mi>j</mi></msub></mrow><annotation encoding='application/x-tex'>x_i \neq x_j</annotation></semantics></math>. The definition at coincident vertices <math class='maruku-mathml' display='inline' id='mathml_71bbeeac154f0151a4445a23f10d0dbb68723b56_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>x</mi> <mi>i</mi></msub><mo>=</mo><msub><mi>x</mi> <mi>j</mi></msub></mrow><annotation encoding='application/x-tex'>x_i = x_j</annotation></semantics></math> requires a choice of <em><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></em> to the <a class='existingWikiWord' href='/nlab/show/diagonal+morphism'>diagonal</a> locus. This choice is the “<a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>” of the Feynman diagram.</p>
+</div>
 </div>
 
 <div class="revisedby">
-  Revised on October 30, 2017 10:58:02 
+  Revised on October 30, 2017 11:59:16 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
