--- a/pages/11197.html
+++ b/pages/11197.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -538,7 +538,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples_2'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#examples_3'>Examples</a></li><li><a href='#equivariant_duality'>Equivariant duality</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/stable+%28infinity%2C1%29-category+of+spectra'>stable (infinity,1)-category of spectra</a> has a <a class='existingWikiWord' href='/nlab/show/dualizing+object+in+a+closed+category'>dualizing object in a closed category</a> (dualizing module), the <em><a class='existingWikiWord' href='/nlab/show/Anderson+duality'>Anderson spectrum</a></em> <math class='maruku-mathml' display='inline' id='mathml_12ead015720d28c0e3cfafdeaf0a89af979af57c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>I</mi> <mi>ℤ</mi></msub></mrow><annotation encoding='application/x-tex'>I_{\mathbb{Z}}</annotation></semantics></math> (<a class='existingWikiWord' href='/nlab/show/Representability+Theorems'>Lurie, Example 4.3.9</a>). The <a class='existingWikiWord' href='/nlab/show/duality'>duality</a> that this induces is called <em>Anderson duality</em>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/stable+%28infinity%2C1%29-category+of+spectra'>stable (infinity,1)-category of spectra</a> has a <a class='existingWikiWord' href='/nlab/show/dualizing+object+in+a+closed+category'>dualizing object</a> (dualizing module) on a suitable subcategory of finite spectra. It is called the <em><a class='existingWikiWord' href='/nlab/show/Anderson+duality'>Anderson spectrum</a></em> <math class='maruku-mathml' display='inline' id='mathml_26842b978002840576dfa612ad9465b867a0e390_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>I</mi> <mi>ℤ</mi></msub></mrow><annotation encoding='application/x-tex'>I_{\mathbb{Z}}</annotation></semantics></math> (<a class='existingWikiWord' href='/nlab/show/Representability+Theorems'>Lurie, Example 4.3.9</a>). The <a class='existingWikiWord' href='/nlab/show/duality'>duality</a> that this induces is called <em>Anderson duality</em>.</p>
 
 <h2 id='examples_2'>Examples</h2>
 
@@ -554,9 +554,9 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>The Anderson dual of <a class='existingWikiWord' href='/nlab/show/K-theory+spectrum'>KU</a> is (complex conjugation-equivariantly) the 4-fold <a class='existingWikiWord' href='/nlab/show/suspension+spectrum'>suspension spectrum</a> <math class='maruku-mathml' display='inline' id='mathml_12ead015720d28c0e3cfafdeaf0a89af979af57c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Σ</mi> <mn>4</mn></msup><mi>KU</mi></mrow><annotation encoding='application/x-tex'>\Sigma^4 KU</annotation></semantics></math> (<a href='#HeardStojanoska14'>Heard-Stojanoska 14, theorem 8.2</a>).</p>
+<p>The Anderson dual of <a class='existingWikiWord' href='/nlab/show/K-theory+spectrum'>KU</a> is (complex conjugation-equivariantly) the 4-fold <a class='existingWikiWord' href='/nlab/show/suspension+spectrum'>suspension spectrum</a> <math class='maruku-mathml' display='inline' id='mathml_26842b978002840576dfa612ad9465b867a0e390_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Σ</mi> <mn>4</mn></msup><mi>KU</mi></mrow><annotation encoding='application/x-tex'>\Sigma^4 KU</annotation></semantics></math> (<a href='#HeardStojanoska14'>Heard-Stojanoska 14, theorem 8.2</a>).</p>
 
-<p>Similarly <a class='existingWikiWord' href='/nlab/show/tmf'>tmf</a><math class='maruku-mathml' display='inline' id='mathml_12ead015720d28c0e3cfafdeaf0a89af979af57c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>1</mn><mo stretchy='false'>/</mo><mn>2</mn><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[1/2]</annotation></semantics></math> is Anderson dual to its 21-fold suspension (<a href='#Stojanoska12'>Stojanoska 12</a>).</p>
+<p>Similarly <a class='existingWikiWord' href='/nlab/show/tmf'>tmf</a><math class='maruku-mathml' display='inline' id='mathml_26842b978002840576dfa612ad9465b867a0e390_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>1</mn><mo stretchy='false'>/</mo><mn>2</mn><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[1/2]</annotation></semantics></math> is Anderson dual to its 21-fold suspension (<a href='#Stojanoska12'>Stojanoska 12</a>).</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -635,14 +635,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 19, 2017 18:26:36 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  Revised on October 31, 2017 00:31:12 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Anderson+duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Anderson+duality/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Anderson+duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Anderson+duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Anderson+duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Anderson+duality/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Anderson+duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Anderson+duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
