--- a/pages/5275.html
+++ b/pages/5275.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_309affcf09e2a699d68e0b8d3d5b4b6d2ada14cd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
+<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_9c31861bf1543f23fbd8681f637209eebc068383_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a></strong></p>
@@ -345,7 +345,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_309affcf09e2a699d68e0b8d3d5b4b6d2ada14cd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
+<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_9c31861bf1543f23fbd8681f637209eebc068383_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
 </li>
 
 <li>
@@ -563,7 +563,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/twist'>balanced monoidal category</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/balanced+monoidal+category'>balanced monoidal category</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/twist'>twist</a></li>
@@ -803,18 +803,18 @@ margin-left: 0em;
 <div class='un_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+%28infinity%2C1%29-category'>symmetric monoidal (∞,1)-category</a> <math class='maruku-mathml' display='inline' id='mathml_309affcf09e2a699d68e0b8d3d5b4b6d2ada14cd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>C</mi><mo>,</mo><mo>⊗</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(C,\otimes)</annotation></semantics></math> is <strong>closed</strong> if for each <a class='existingWikiWord' href='/nlab/show/object'>object</a> <math class='maruku-mathml' display='inline' id='mathml_309affcf09e2a699d68e0b8d3d5b4b6d2ada14cd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∈</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>X \in C</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_309affcf09e2a699d68e0b8d3d5b4b6d2ada14cd_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>⊗</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>:</mo><mi>C</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>
+<p>A <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+%28infinity%2C1%29-category'>symmetric monoidal (∞,1)-category</a> <math class='maruku-mathml' display='inline' id='mathml_9c31861bf1543f23fbd8681f637209eebc068383_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>C</mi><mo>,</mo><mo>⊗</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(C,\otimes)</annotation></semantics></math> is <strong>closed</strong> if for each <a class='existingWikiWord' href='/nlab/show/object'>object</a> <math class='maruku-mathml' display='inline' id='mathml_9c31861bf1543f23fbd8681f637209eebc068383_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∈</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>X \in C</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9c31861bf1543f23fbd8681f637209eebc068383_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>⊗</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>:</mo><mi>C</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>
   X \otimes (-) : C \to C
 
 </annotation></semantics></math></div>
-<p>given by forming the <a class='existingWikiWord' href='/nlab/show/tensor+product'>tensor product</a> with <math class='maruku-mathml' display='inline' id='mathml_309affcf09e2a699d68e0b8d3d5b4b6d2ada14cd_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> has a <a class='existingWikiWord' href='/nlab/show/right+adjoint'>right</a> <a class='existingWikiWord' href='/nlab/show/adjoint+%28infinity%2C1%29-functor'>adjoint (∞,1)-functor</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_309affcf09e2a699d68e0b8d3d5b4b6d2ada14cd_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>⊗</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>⊣</mo><mo stretchy='false'>[</mo><mi>X</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo><mo stretchy='false'>)</mo><mo>:</mo><mi>C</mi><mover><munder><mo>→</mo><mrow><mo stretchy='false'>[</mo><mi>X</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo></mrow></munder><mover><mo>←</mo><mrow><mi>X</mi><mo>⊗</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow></mover></mover><mi>C</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>given by forming the <a class='existingWikiWord' href='/nlab/show/tensor+product'>tensor product</a> with <math class='maruku-mathml' display='inline' id='mathml_9c31861bf1543f23fbd8681f637209eebc068383_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> has a <a class='existingWikiWord' href='/nlab/show/right+adjoint'>right</a> <a class='existingWikiWord' href='/nlab/show/adjoint+%28infinity%2C1%29-functor'>adjoint (∞,1)-functor</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9c31861bf1543f23fbd8681f637209eebc068383_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>⊗</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>⊣</mo><mo stretchy='false'>[</mo><mi>X</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo><mo stretchy='false'>)</mo><mo>:</mo><mi>C</mi><mover><munder><mo>→</mo><mrow><mo stretchy='false'>[</mo><mi>X</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo></mrow></munder><mover><mo>←</mo><mrow><mi>X</mi><mo>⊗</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow></mover></mover><mi>C</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   (X \otimes(-)\dashv [X,-] ) : C \stackrel{\overset{X \otimes (-)}{\leftarrow}}{\underset{[X,-]}{\to}} C
   \,.
 
 </annotation></semantics></math></div>
-<p>(In cases where the monoidal structure is not assumed symmetric, the property of possessing a right adjoint to tensoring on the left (resp. right) is called <em>left</em> (resp. <em>right</em>) <em>closed</em>, while <em>closed</em> is used for the properties jointly (Def. Definition 4.1.1.17 of <a class='existingWikiWord' href='/nlab/show/Higher+Algebra'>Higher Algebra</a>).)</p>
+<p>(In cases where the monoidal structure is not assumed symmetric, the property of possessing a right adjoint to tensoring on the left (resp. right) is called <em>left</em> (resp. <em>right</em>) <em>closed</em>, while <em>closed</em> is used for the properties jointly (Def. Definition 4.1.1.15 of <a class='existingWikiWord' href='/nlab/show/Higher+Algebra'>Higher Algebra</a>).)</p>
 </div>
 
 <h2 id='examples_2'>Examples</h2>
@@ -841,7 +841,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed monoidal category</a>, <strong>closed monoidal <math class='maruku-mathml' display='inline' id='mathml_309affcf09e2a699d68e0b8d3d5b4b6d2ada14cd_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category</strong></p>
+<p><a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed monoidal category</a>, <strong>closed monoidal <math class='maruku-mathml' display='inline' id='mathml_9c31861bf1543f23fbd8681f637209eebc068383_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category</strong></p>
 </li>
 </ul>
 
@@ -854,14 +854,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 15, 2017 08:24:51 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (129.12.18.176)
+  Revised on November  1, 2017 09:07:30 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (84.63.209.149)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/closed+monoidal+%28infinity%2C1%29-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/closed+monoidal+%28infinity%2C1%29-category/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/closed+monoidal+%28infinity%2C1%29-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/closed+monoidal+%28infinity%2C1%29-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/closed+monoidal+%28infinity%2C1%29-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/closed+monoidal+%28infinity%2C1%29-category/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/closed+monoidal+%28infinity%2C1%29-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/closed+monoidal+%28infinity%2C1%29-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
