--- a/pages/18683.html
+++ b/pages/18683.html
@@ -328,6 +328,12 @@ margin-left: 0em;
 <li id='Dermisek'><a class='existingWikiWord' href='/nlab/show/Radovan+Dermisek'>Radovan Dermisek</a>, <em>qft I-9</em> (<a href='http://www.physics.indiana.edu/~dermisek/QFT_09/qft-I-9-4p.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/DermisekDiracField.pdf' title='pdf'>pdf</a>)</li>
 </ul>
 
+<p>with background on <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in</p>
+
+<ul>
+<li id='DermisekI8'><a class='existingWikiWord' href='/nlab/show/Radovan+Dermisek'>Radovan Dermisek</a> <em>qft I-8</em> (<a href='http://www.physics.indiana.edu/~dermisek/QFT_09/qft-I-8-4p.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/DermisekSpinorField.pdf' title='pdf'>pdf</a>)</li>
+</ul>
+
 <p>A textbook account in the context of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is in</p>
 
 <ul>
@@ -345,14 +351,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 25, 2017 06:51:01 
+  Revised on November  1, 2017 09:59:54 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dirac+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+field/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Dirac+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Dirac+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+field/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Dirac+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
